# guvcview-opipc

./: .gitignore  Makefile.am  bootstrap.sh  config.cache  config.h  config.status  configure.ac  dep-install.sh  libtool  render_sdl.dump
data/: Makefile.am
guvcview/: Makefile.am  atem.h  cec_controls.c  cec_controls.h  config.c  controls.c  controls.h  guvcview  guvcview.c  options.c  video_capture.c  video_capture.h
gview_encoder/: video_codecs.c
gview_render/: render_sdl2.c
gview_v4l2core/: Makefile.am  display.c  display.h  frame_decoder.c  granding.c  granding.h  gviewv4l2core.h  jpeg.c  jpeg_dec_main.c  jpeg_dec_main.h  jpeg_decoder.c  jpeg_decoder.c.bak  jpeg_decoder.c.bak.cedar  jpeg_decoder.c.libhw.bak  jpeg_decoder.c.turbojpeg.bak  memory.c  memory.h  save_image_jpeg.c  uvc_h264.c  v4l2_controls.c  v4l2_core.c  ve.c  ve.h
gview_v4l2core/jpeg/: jpeg-dec-main.c  jpeg-dec-main.h
includes/: gview.h
